force-app/main/default/objects/sked_Resource_Biomed_Collection_Op__c/sked_Resource_Biomed_Collection_Op__c.object-meta.xml
<CustomObject>
    <label>Secondary Collection Operation</label>
    <nameField>
        <displayFormat>RBCO-{0000}</displayFormat>
        <label>Secondary Collection Operation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secondary Collection Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>