force-app/main/default/objects/sked_Resource_Biomed_Collection_Op__c/fields/sked_Resource__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipName>sked_Resource_Biomed_Collection_Ops</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>